tests/baselines/reference/collisionArgumentsInterfaceMembers(strict=true).errors.txt
collisionArgumentsInterfaceMembers.ts(3,5): error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsInterfaceMembers.ts(3,17): error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
collisionArgumentsInterfaceMembers.ts(3,20): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsInterfaceMembers.ts(6,5): error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsInterfaceMembers.ts(6,6): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsInterfaceMembers.ts(6,25): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
collisionArgumentsInterfaceMembers.ts(9,5): error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsInterfaceMembers.ts(9,6): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsInterfaceMembers.ts(14,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsInterfaceMembers.ts(14,21): error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
collisionArgumentsInterfaceMembers.ts(14,24): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsInterfaceMembers.ts(17,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsInterfaceMembers.ts(17,10): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsInterfaceMembers.ts(17,29): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
collisionArgumentsInterfaceMembers.ts(20,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsInterfaceMembers.ts(20,10): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsInterfaceMembers.ts(25,5): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsInterfaceMembers.ts(25,20): error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
collisionArgumentsInterfaceMembers.ts(25,23): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsInterfaceMembers.ts(26,5): error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsInterfaceMembers.ts(26,10): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsInterfaceMembers.ts(26,29): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
collisionArgumentsInterfaceMembers.ts(27,5): error TS7010: 'fooNoError', which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsInterfaceMembers.ts(27,16): error TS1100: Invalid use of 'arguments' in strict mode.


==== collisionArgumentsInterfaceMembers.ts (24 errors) ====
    // call
    interface i1 {
        (i: number, ...arguments); // no error - no code gen
        ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
                    ~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
                       ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }
    interface i12 {
        (arguments: number, ...rest); // no error - no code gen
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
         ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
                            ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
    }
    interface i1NoError {
        (arguments: number);  // no error
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
         ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }
    
    // new
    interface i2 {
        new (i: number, ...arguments); // no error - no code gen
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
                        ~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
                           ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }
    interface i21 {
        new (arguments: number, ...rest); // no error - no code gen
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
             ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
                                ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
    }
    interface i2NoError {
        new (arguments: number);  // no error
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
             ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }
    
    // method
    interface i3 {
        foo(i: number, ...arguments); // no error - no code gen
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
                       ~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
                          ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        foo1(arguments: number, ...rest); // no error - no code gen
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
             ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
                                ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
        fooNoError(arguments: number);  // no error
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'fooNoError', which lacks return-type annotation, implicitly has an 'any' return type.
                   ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }